# ocr_meter

./: Dockerfile  README.md  app.py  const.py  docker-compose.yml  example.py  models.py  pipeline.py  preprocessing.py  pyproject.toml  requirements.txt  stream.py
.streamlit/: config.toml
ocr_meter/: const.py  image_processor.py  models.py  pipeline.py  preprocessing.py
templates/: index.html
tests/: test_pipeline.py  test_preprocessing.py
